--- a/paginaImprimir.html
+++ b/paginaImprimir.html
@@ -39,7 +39,7 @@
             </tr>
             <tr class="h-4">
                 <td colspan="3">
-                    Finalidade: Prestar esclarecimentos à delegada Elisabeth Salvadeu.
+                    Finalidade: Prestar esclarecimentos ao delegado Wendel Ferreira Santos.
                 </td>
             </tr>
             <tr class="h-4">
